# PyJalNameConfig

./: .gitignore  main.py  pyproject.toml
src/: nameConfigTool.py
